--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+click==5.1
 Flask==0.10.1
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+redis==2.10.3
+rq==0.5.5
 Werkzeug==0.10.4
 youtube-dl==2015.9.9
